Finished sections element
- Added a new class to handle sections display
- Finished sections printout

--- a/css/main.css
+++ b/css/main.css
@@ -620,3 +620,18 @@ table tbody tr td input.order
     float:right;
     margin-right:10px;
 }
+
+.sublist
+{
+    margin-left:15px;
+}
+
+.question_answers
+{
+    clear:both;
+}
+
+.left 
+{
+    float:left;
+}
