--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,7 @@ background-position:0 0;
   text-align: right;
   width: 420px;
   padding-bottom: 10px;
+  color:red;
 }
 
 /*----------------------*/
