--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,7 @@ background-position:0 0;
     padding:5px 15px;
     position:relative;
     min-height:85px;
+    padding: 5px 15px 40px 15px;
   }
 
     #droplet
