--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ p
 /* HEADER ELEMENTS */
 #header_wrapper
 {
-  background:url(../media/site-images/header_bg.png) -535px 0;
+  background:url(../media/site-images/header_bg.png) -595px 0;
   font-family: 'Josefin Sans', Helvetica, Arial, sans-serif;
   font-weight:600;
   min-height:210px;
@@ -701,4 +701,11 @@ ul.square li
     background-repeat: no-repeat;
     background-position-y: 54%;
     height:100%;
+}
+
+#asterisk
+{
+	margin: 10px 285px 10px 0; 
+	font-size: 17px; 
+	text-align: right;
 }
